@@ -1,3 +1,9 @@
+2007-07-18: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Verifier.pm: changed fetch_policy() back to
+   fetch_author_policy(); added fetch_sender_policy()
+ * lib/Mail/DKIM/Policy.pm: now implements just Dk policies
+ * lib/Mail/DKIM/DkimPolicy.pm: a new module for DKIM signing practices
+
 2007-06-11: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm: public_key no longer available as a
    verifier property; use eval block instead of try...otherwise;
